--- a/team/team.tex
+++ b/team/team.tex
@@ -19,12 +19,14 @@
 \begin{tabular}{|l|l|l|}
     \hline
     \textbf{Роль} & \textbf{ФИО} & \textbf{Контактная информация} \\
-    \hline
+    \hline 
     Заказчик & Генадий Коваленко & kovalenko@i-brain.tech \\
     \hline
     Спонсор проекта & Коваленко Генадий & kovalenko@i-brain.tech \\
     \hline
-    Руководитель проекта & Стоян Андрей Сергеевич & stoyan.yukio@gmail.com \\ 
+    Руководитель проекта & Стоян Андрей Сергеевич 
+       & stoyan.yukio@gmail.com \\ 
+     & & 8-904-333-89-81 \\ 
     \hline
     Команда проекта 
      & Костина Надежда Хасановна & \\ \cline{2-3}
