--- a/team/team.tex
+++ b/team/team.tex
@@ -21,8 +21,8 @@
     \textbf{Роль} & \textbf{ФИО} & \textbf{Контактная информация} \\
     \hline 
     Заказчик & Генадий Коваленко & kovalenko@i-brain.tech \\
-    \hline
-    Спонсор проекта & Коваленко Генадий & kovalenko@i-brain.tech \\
+    %\hline
+    %Спонсор проекта & Коваленко Генадий & kovalenko@i-brain.tech \\
     \hline
     Руководитель проекта & Стоян Андрей Сергеевич 
        & stoyan.yukio@gmail.com \\ 
