--- a/team/team.tex
+++ b/team/team.tex
@@ -27,7 +27,9 @@
      & Смиренский Павел & \\ \cline{2-3}
      & Счасливцев Никита & \\ \cline{2-3}
      & Темиргалиев Рафаэль & \\ \cline{2-3}
-     & Дубровин Анатолий & \\
+     & Дубровин Анатолий 
+     & dubrovinanatolii@mail.ru \\ 
+     & & 8-965-766-05-07 \\
     \hline
 \end{tabular}
 
