Team compilation fixed

--- a/team/team.tex
+++ b/team/team.tex
@@ -1,5 +1,7 @@
 \documentclass[a4paper,12pt]{article}
 
+\input{preamble_article_ru.tex}
+
 \begin{document}
 
 \textbf{Название проекта: }
@@ -28,7 +30,7 @@
      & Счасливцев Никита & \\ \cline{2-3}
      & Темиргалиев Рафаэль & \\ \cline{2-3}
      & Дубровин Анатолий 
-     & dubrovinanatolii@mail.ru \\ 
+       & dubrovinanatolii@mail.ru \\ 
      & & 8-965-766-05-07 \\
     \hline
 \end{tabular}
