--- a/team/team.tex
+++ b/team/team.tex
@@ -28,7 +28,9 @@
      & Василевский Елисей & \\ \cline{2-3}
      & Смиренский Павел & \\ \cline{2-3}
      & Счасливцев Никита & \\ \cline{2-3}
-     & Темиргалиев Рафаэль & \\ \cline{2-3}
+     & Темиргалиев Рафаэль Анварович
+       & rafantem@mail.ru \\
+     & & 8-981-788-29-01 \\
      & Дубровин Анатолий Максимович
        & dubrovinanatolii@mail.ru \\ 
      & & 8-965-766-05-07 \\
