--- a/team/team.tex
+++ b/team/team.tex
@@ -27,7 +27,8 @@
      & Приймак Евгений & \\ \cline{2-3}
      & Василевский Елисей & \\ \cline{2-3}
      & Смиренский Павел & \\ \cline{2-3}
-     & Счасливцев Никита & \\ \cline{2-3}
+     & Счастливцев Никита Александрович & nikita-s4astlivtsev2012@yandex.ru
+      \\ \cline{2-3}
      & Темиргалиев Рафаэль & \\ \cline{2-3}
      & Дубровин Анатолий Максимович
        & dubrovinanatolii@mail.ru \\ 
