--- a/team/team.tex
+++ b/team/team.tex
@@ -14,7 +14,7 @@
     \hline
     \textbf{Роль} & \textbf{ФИО} & \textbf{Контактная информация} \\
     \hline 
-    Заказчик & Генадий Коваленко & kovalenko@i-brain.tech \\
+    Заказчик & Геннадий Коваленко & kovalenko@i-brain.tech \\
     %\hline
     %Спонсор проекта & Коваленко Генадий & kovalenko@i-brain.tech \\
     \hline
