--- a/team/team.tex
+++ b/team/team.tex
@@ -22,7 +22,7 @@
     \hline
     Команда проекта 
      & Костина Надежда Хасановна & \\ \cline{2-3}
-     & Приймак Евгений & \\ \cline{2-3}
+     & Приймак Евгений Дмитриевич & eugenepriymak@yandex.ru \\ \cline{2-3}
      & Василевский Елисей & \\ \cline{2-3}
      & Смиренский Павел & \\ \cline{2-3}
      & Счасливцев Никита & \\ \cline{2-3}
