--- a/team/team.tex
+++ b/team/team.tex
@@ -14,7 +14,7 @@
     \hline
     \textbf{Роль} & \textbf{ФИО} & \textbf{Контактная информация} \\
     \hline 
-    Заказчик & Геннадий Коваленко & kovalenko@i-brain.tech \\
+    Заказчик & Коваленко Геннадий & kovalenko@i-brain.tech \\
     %\hline
     %Спонсор проекта & Коваленко Генадий & kovalenko@i-brain.tech \\
     \hline
@@ -23,7 +23,8 @@
      & & 8-904-333-89-81 \\ 
     \hline
     Команда проекта 
-     & Костина Надежда Хасановна & \\ \cline{2-3}
+     & Костина Надежда Хасановна 
+       & nadianhasan@gmail.com \\ \cline{2-3}
      & Приймак Евгений & \\ \cline{2-3}
      & Василевский Елисей & \\ \cline{2-3}
      & Смиренский Павел & \\ \cline{2-3}
