--- a/about/about.tex
+++ b/about/about.tex
@@ -69,7 +69,7 @@
 \subsection*{Характеристика}
 
 \noindent
-Спокойная игра в настольный теннис способствует расслаблению и очень эффективному отдыху, что позволит больным проще относиться к тяжёлым для них упражнениям в игре и даст стимул заниматься больше.
+Спокойная игра в настольный теннис способствует расслаблению и эффективному отдыху, что позволит больным проще относиться к тяжёлым для них упражнениям в игре и даст стимул заниматься больше.
 
 \noindent
 Настольный теннис даёт большой простор для всевозможных упражнений. Игра может быть сколь угодно упрощена в самых разных аспектах.
