--- a/team/team.tex
+++ b/team/team.tex
@@ -23,18 +23,14 @@
      & & 8-904-333-89-81 \\ 
     \hline
     Команда проекта 
-     & Костина Надежда Хасановна 
-       & nadianhasan@gmail.com \\ \cline{2-3}
+     & Костина Надежда Хасановна & nadianhasan@gmail.com \\ \cline{2-3}
      & Приймак Евгений Дмитриевич & eugenepriymak@yandex.ru \\ \cline{2-3}
-     & Василевский Елисей & \\ \cline{2-3}
-     & Смиренский Павел & \\ \cline{2-3}
-     & Счастливцев Никита Александрович 
-       & nikita-s4astlivtsev2012@yandex.ru \\ \cline{2-3}
-     & Темиргалиев Рафаэль Анварович
-       & rafantem@mail.ru \\
+     & Василевский Елисей Александрович & nexus\_s9@mail.ru \\ \cline{2-3}
+     & Смиренский Павел Романович & clacter@bk.ru \\ \cline{2-3}
+     & Счастливцев Никита Александрович & nikita-s4astlivtsev2012@yandex.ru \\ \cline{2-3}
+     & Темиргалиев Рафаэль Анварович & rafantem@mail.ru \\
      & & 8-981-788-29-01 \\ \cline{2-3}
-     & Дубровин Анатолий Максимович
-       & dubrovinanatolii@mail.ru \\ 
+     & Дубровин Анатолий Максимович & dubrovinanatolii@mail.ru \\ 
      & & 8-965-766-05-07 \\
     \hline
 \end{tabular}
