--- a/doc/slides/slides.tex
+++ b/doc/slides/slides.tex
@@ -6,7 +6,7 @@
     
 
 \begin{frame}
-    \centering{\textbf{{\Large Название проекта}}}
+    \centering{\textbf{{\Large Соревновательное десктоп (ноут) приложение – сетевая игра на базе интерфейса «мозг-компьютер», управляемая мысленными командами (воображением движений вместо реальных движений).}}}
 \end{frame}
 
 
@@ -80,14 +80,17 @@
 \begin{frame}
 \frametitle{\insertsection} 
 \framesubtitle{\insertsubsection}
+\begin{itemize}
+    \item Сроки: 2 месяца
+    \item Бюджет: 500р.
+\end{itemize}
 \end{frame}
 
 
 \section{Спасибо за внимание!}
 
 \begin{frame}
-\frametitle{\insertsection} 
-\framesubtitle{\insertsubsection}
+\centering{\textbf{\Large Спасибо за внимание!}}
 \end{frame}
 
 
