--- a/doc/slides/slides.tex
+++ b/doc/slides/slides.tex
@@ -27,52 +27,12 @@
 \end{frame}
 
 
-\section{Актуальность}
-
-\begin{frame}
-\frametitle{\insertsection} 
-\framesubtitle{\insertsubsection}
-\end{frame}
-
-
-\section{Продукт проекта}
-
-\begin{frame}
-\frametitle{\insertsection} 
-\framesubtitle{\insertsubsection}
-\end{frame}
-
-
-\section{Целевая аудитория}
-
-\begin{frame}
-\frametitle{\insertsection} 
-\framesubtitle{\insertsubsection}
-\end{frame}
-
-
-\section{Цели проекта}
-
-\begin{frame}
-\frametitle{\insertsection} 
-\framesubtitle{\insertsubsection}
-\end{frame}
-
-
-\section{Предлагаемое решение}
-
-\begin{frame}
-\frametitle{\insertsection} 
-\framesubtitle{\insertsubsection}
-\end{frame}
-
-
-\section{Преимущества}
-
-\begin{frame}
-\frametitle{\insertsection} 
-\framesubtitle{\insertsubsection}
-\end{frame}
+\input{topicality}
+\input{product}
+\input{targeted_audience}
+\input{targets}
+\input{solution}
+\input{advantages}
 
 
 \section{Сроки и бюджет}
