--- a/doc/slides/advantages.tex
+++ b/doc/slides/advantages.tex
@@ -3,4 +3,7 @@
 \begin{frame}
 \frametitle{\insertsection} 
 \framesubtitle{\insertsubsection}
+    \begin{itemize}
+        \item Высокий уровень кастомизации.
+    \end{itemize}
 \end{frame}
