--- a/doc/slides/targeted_audience.tex
+++ b/doc/slides/targeted_audience.tex
@@ -3,4 +3,7 @@
 \begin{frame}
 \frametitle{\insertsection} 
 \framesubtitle{\insertsubsection}
+
+Люди, у которых из-за болезни ограничена способность к движению.
+
 \end{frame}
