--- a/doc/slides/targets.tex
+++ b/doc/slides/targets.tex
@@ -3,4 +3,9 @@
 \begin{frame}
 \frametitle{\insertsection} 
 \framesubtitle{\insertsubsection}
+    \begin{itemize}
+        \item Создание увлекательной игры.
+        \item Увеличение эффективности реабилитационных процедур.
+        \item Повысить стремление больных к выздоровлению.
+    \end{itemize}
 \end{frame}
