--- a/doc/slides/advantages.tex
+++ b/doc/slides/advantages.tex
@@ -5,5 +5,7 @@
 \framesubtitle{\insertsubsection}
     \begin{itemize}
         \item Высокий уровень кастомизации.
+        \item Различные движения кисти человека
+        \item Соревновательный аспект в мотивации
     \end{itemize}
 \end{frame}
