--- a/doc/slides/product.tex
+++ b/doc/slides/product.tex
@@ -1,7 +1,37 @@
 \section{Продукт проекта}
+\subsection{ООО «АйБрейн»}
 
 \begin{frame}
 \frametitle{\insertsection} 
 \framesubtitle{\insertsubsection}
-Сетевая игра -- настольный теннис.
+
+\begin{minipage}[h]{0.4\linewidth}
+    \includegraphics[width=\linewidth]{2.png}
+\end{minipage}
+\hfill 
+\begin{minipage}[h]{0.5\linewidth}
+    \begin{itemize}
+        \item Целью компании является внедрение комплекса нейро-реабилитации нового поколения, который будет доступным для домашнего использования.
+        \item 	Решение – неинвазивный нейро-интерфейс для реабилитации, позволяющий обездвиженному человеку управлять вспомогательным устройством с помощью сигналов мозга.
+    \end{itemize}
+\end{minipage}
+
+\end{frame}
+
+
+\subsection{Настольный теннис}
+
+\begin{frame}
+\frametitle{\insertsection} 
+\framesubtitle{\insertsubsection}
+\begin{minipage}[h]{0.4\linewidth}
+    \includegraphics[width=\linewidth]{3.jpg}
+\end{minipage}
+\hfill 
+\begin{minipage}[h]{0.5\linewidth}
+    \begin{itemize}
+        \item Создание игры на базе интерфейса «мозг-компьютер» 
+        \item Цель - усилить мотивацию человека к восстановлению 
+    \end{itemize}
+\end{minipage}
 \end{frame}
