--- a/doc/slides/solution.tex
+++ b/doc/slides/solution.tex
@@ -1,31 +1,13 @@
-\section{Предлагаемое решение 1}
+\section{Предлагаемое решение}
 
 \begin{frame}
 \frametitle{\insertsection} 
 \framesubtitle{\insertsubsection}
-Игра, многие параметры которой могут быть настроены для занятий с пациентами.
+    Игра, многие параметры которой могут быть настроены для занятий с пациентами.
     \begin{itemize}
-        \item Скорость полёта шарика и ход игрового времени могут быть настроены.
-        
-        \item Когда мячик подлетает к половине стола игрока, игровое время может замедляться, чтобы дать возможность игроку сделать движение, и классификатору --- чтобы его распознать.
-        
-        \item  В простейшем варианте игра может сама "играть" в себя. Человеку нужно будет только сделать какое-то движение (например, сжать кулак), чтобы бот, который играет за человека, сам отбил шарик.
-        
-        \item Игровой экран может быть поделён на зоны, поверхность стола --- также, чтобы вводить новые ситуации в игру, на которые нужно будет отвечать новыми движениями.
+        \item Скорость полёта шарика и ход игрового времени.
+        \item Уровни сложности.
+        \item Много возможных движений.
+        \item Сетевой режим.
     \end{itemize}
 \end{frame}
-
-\section{Предлагаемое решение 2}
-
-\begin{frame}
-\frametitle{\insertsection} 
-\framesubtitle{\insertsubsection}
-    \begin{itemize}
-        \item В реальности техника игры очень комплексна (двигаются руки, кисти, даже пальцы участвуют в игре), что даёт большой простор на введение новых движений.
-        
-        \item Игрок будет видеть, как ракетка на экране отвечает его движениям, что важно для способствования восстановлению двигательных функций.
-        
-        \item Возможность сетевой игры вводит элемент конкуренции, что способствует большей целеустремлённости к занятиям и выздоровлению.
-    \end{itemize}
-\end{frame}
-
