--- a/doc/slides/targeted_audience.tex
+++ b/doc/slides/targeted_audience.tex
@@ -1,9 +1,12 @@
 \section{Целевая аудитория}
 
+
 \begin{frame}
-\frametitle{\insertsection} 
-\framesubtitle{\insertsubsection}
-
-Люди, у которых из-за болезни ограничена способность к движению.
-
+    \frametitle{\insertsection} 
+    \framesubtitle{\insertsubsection}
+    \begin{wrapfigure}{r}{0.5\linewidth} 
+        \vspace{-5ex}
+        \includegraphics[width=\linewidth]{4.jpg}
+    \end{wrapfigure}
+    \large Люди с нарушениями двигательных способностей, перенесших инсульт или травмы головного мозга.
 \end{frame}
