--- a/doc/slides/targets.tex
+++ b/doc/slides/targets.tex
@@ -1,11 +1,19 @@
 \section{Цели проекта}
 
 \begin{frame}
-\frametitle{\insertsection} 
-\framesubtitle{\insertsubsection}
+    \frametitle{\insertsection} 
+    \framesubtitle{\insertsubsection}
+    
+    \begin{minipage}[h]{0.4\linewidth}
+        \includegraphics[width=\linewidth]{5.jpg}
+    \end{minipage}
+    \hfill 
+    \begin{minipage}[h]{0.5\linewidth}
     \begin{itemize}
         \item Создание увлекательной игры.
         \item Увеличение эффективности реабилитационных процедур.
         \item Повысить стремление больных к выздоровлению.
     \end{itemize}
+    \end{minipage}
+
 \end{frame}
