--- a/doc/slides/topicality.tex
+++ b/doc/slides/topicality.tex
@@ -4,6 +4,19 @@
 \frametitle{\insertsection} 
 \framesubtitle{\insertsubsection}
 
-% скатать у Коваленки
+\begin{figure}[h]
+    \begin{center}
+        \begin{minipage}[h]{0.5\linewidth}
+            \begin{itemize}
+                \item 	Ежегодно 15 миллионов человек страдают от инсульта во всем мире
+                \item 	5 миллионов навсегда остаются инвалидами
+            \end{itemize}
+        \end{minipage}
+        \hfill 
+        \begin{minipage}[h]{0.4\linewidth}
+            \includegraphics[width=\linewidth]{1.jpg}
+        \end{minipage}
+    \end{center}
+\end{figure}
 
 \end{frame}
