Slides github added

--- a/doc/slides/slides.tex
+++ b/doc/slides/slides.tex
@@ -7,6 +7,9 @@
 
 \begin{frame}
     \centering{\textbf{{\Large Соревновательное десктоп (ноут) приложение – сетевая игра на базе интерфейса «мозг-компьютер», управляемая мысленными командами (воображением движений вместо реальных движений).}}}
+    
+    \vspace{5ex}
+    \url{https://github.com/winter-yuki/neuro-game} 
 \end{frame}
 
 
