Slides name updated

--- a/doc/slides/slides.tex
+++ b/doc/slides/slides.tex
@@ -6,9 +6,12 @@
     
 
 \begin{frame}
-    \centering{\textbf{{\Large Соревновательное десктоп (ноут) приложение – сетевая игра на базе интерфейса «мозг-компьютер», управляемая мысленными командами (воображением движений вместо реальных движений).}}}
+    \centering{\textbf{{\Large Brain Tennis}}}
     
-    \vspace{5ex}
+    \vspace{2ex}
+    \centering{\small \textit{ИПММ-186}}
+    
+    \vspace{2ex}
     \url{https://github.com/winter-yuki/neuro-game} 
 \end{frame}
 
