--- a/doc/slides/product.tex
+++ b/doc/slides/product.tex
@@ -1,22 +1,23 @@
 \section{Продукт проекта}
-\subsection{ООО «АйБрейн»}
 
-\begin{frame}
-\frametitle{\insertsection} 
-\framesubtitle{\insertsubsection}
-
-\begin{minipage}[h]{0.4\linewidth}
-    \includegraphics[width=\linewidth]{2.png}
-\end{minipage}
-\hfill 
-\begin{minipage}[h]{0.5\linewidth}
-    \begin{itemize}
-        \item Целью компании является внедрение комплекса нейро-реабилитации нового поколения, который будет доступным для домашнего использования.
-        \item 	Решение – неинвазивный нейро-интерфейс для реабилитации, позволяющий обездвиженному человеку управлять вспомогательным устройством с помощью сигналов мозга.
-    \end{itemize}
-\end{minipage}
-
-\end{frame}
+%\subsection{ООО «АйБрейн»}
+%
+%\begin{frame}
+%\frametitle{\insertsection} 
+%\framesubtitle{\insertsubsection}
+%
+%\begin{minipage}[h]{0.4\linewidth}
+%    \includegraphics[width=\linewidth]{2.png}
+%\end{minipage}
+%\hfill 
+%\begin{minipage}[h]{0.5\linewidth}
+%    \begin{itemize}
+%        \item Целью компании является внедрение комплекса нейро-реабилитации нового поколения, который будет доступным для домашнего использования.
+%        \item 	Решение – неинвазивный нейро-интерфейс для реабилитации, позволяющий обездвиженному человеку управлять вспомогательным устройством с помощью сигналов мозга.
+%    \end{itemize}
+%\end{minipage}
+%
+%\end{frame}
 
 
 \subsection{Настольный теннис}
