--- a/doc/slides/slides.tex
+++ b/doc/slides/slides.tex
@@ -4,60 +4,37 @@
 
 \begin{document}
     
-
-\begin{frame}
-    \centering{\textbf{{\Large Brain Tennis}}}
-    
-    \vspace{2ex}
-    \centering{\small \textit{ИПММ-186}}
-    
-    \vspace{2ex}
-    \url{https://github.com/winter-yuki/neuro-game} 
-\end{frame}
+\input{title} % Название проекта
+\input{team} % Команда проекта
+\input{task} % Первоначальная постановка задачи
+\input{targets} % Цель проекта
+\input{plan} % План выполнения проекта
+\input{done} % Выполненные этапы
+%\input{results} % Достигнутый результат
+\input{problems} % Проблемы
 
 
-\section{Команда проекта}
 
-\begin{frame}
-\frametitle{\insertsection} 
-\begin{itemize}
-    \item Стоян Андрей Сергеевич (stoyan.yukio@gmail.com)
-    \item Костина Надежда Хасановна (nadianhasan@gmail.com)
-    \item Приймак Евгений Дмитриевич (eugenepriymak@yandex.ru)
-    \item Василевский Елисей Александрович (nexus\_s9@mail.ru)
-    \item Смиренский Павел Романович (clacter@bk.ru)
-    \item Счастливцев Никита Александрович (nikita-s4astlivtsev2012@yandex.ru)
-    \item Темиргалиев Рафаэль Анварович (rafantem@mail.ru)
-    \item Дубровин Анатолий Максимович (dubrovinanatolii@mail.ru)
-\end{itemize}
-\end{frame}
+
+
+
+
+% Предлагаемое решение и чем отличается от аналогов
+% Вопросы к заказчику
+
+
+
+
+
+
 
 
 \input{topicality}
 \input{product}
 \input{targeted_audience}
-\input{targets}
 \input{solution}
 \input{advantages}
-
-
-\section{Сроки и бюджет}
-
-\begin{frame}
-\frametitle{\insertsection} 
-\framesubtitle{\insertsubsection}
-\begin{itemize}
-    \item Сроки: 2 месяца
-    \item Бюджет: 500р.
-\end{itemize}
-\end{frame}
-
-
-\section{Спасибо за внимание!}
-
-\begin{frame}
-\centering{\textbf{\Large Спасибо за внимание!}}
-\end{frame}
-
+\input{capital}
+\input{fin}
 
 \end{document}
