--- a/doc/slides/targets.tex
+++ b/doc/slides/targets.tex
@@ -1,7 +1,7 @@
 \section{Цели проекта}
 
 \begin{frame}
-    \frametitle{\insertsection} 
+    \input{results}
     \framesubtitle{\insertsubsection}
     
     \begin{minipage}[h]{0.4\linewidth}
@@ -10,9 +10,9 @@
     \hfill 
     \begin{minipage}[h]{0.5\linewidth}
     \begin{itemize}
-        \item Создание увлекательной игры.
-        \item Увеличение эффективности реабилитационных процедур.
-        \item Повысить стремление больных к выздоровлению.
+        \item Создание игры
+        \item Увеличение эффективности реабилитационных процедур
+        \item Повысить стремление больных к выздоровлению
     \end{itemize}
     \end{minipage}
 
