--- a/doc/slides/advantages.tex
+++ b/doc/slides/advantages.tex
@@ -4,7 +4,7 @@
 \frametitle{\insertsection} 
 \framesubtitle{\insertsubsection}
     \begin{itemize}
-        \item Высокий уровень кастомизации.
+        \item Высокий уровень кастомизации
         \item Различные движения кисти человека
         \item Соревновательный аспект в мотивации
     \end{itemize}
