Slides for customer

--- a/doc/slides/problems.tex
+++ b/doc/slides/problems.tex
@@ -1,3 +1,10 @@
+\section{Проблемы}
+
 \begin{frame}
-    content
+\frametitle{\insertsection} 
+    \begin{itemize}
+        \item Нехватка образования и опыта
+        \item Недостаток времени
+        \item Много непростых технологий
+    \end{itemize}
 \end{frame}
