--- a/doc/slides/results.tex
+++ b/doc/slides/results.tex
@@ -1,3 +1,6 @@
+\section{Результаты}
+
 \begin{frame}
-    content
+\frametitle{\insertsection} 
+\includegraphics[width=\linewidth]{rez.png}
 \end{frame}
