--- a/doc/slides/slides.tex
+++ b/doc/slides/slides.tex
@@ -10,31 +10,18 @@
 \input{targets} % Цель проекта
 \input{plan} % План выполнения проекта
 \input{done} % Выполненные этапы
-%\input{results} % Достигнутый результат
+\input{results} % Достигнутый результат
 \input{problems} % Проблемы
-
-
-
-
-
-
-
-% Предлагаемое решение и чем отличается от аналогов
+\input{solution} % Предлагаемое решение
+\input{dif} % Чем отличается от аналогов
 % Вопросы к заказчику
 
 
-
-
-
-
-
-
-\input{topicality}
-\input{product}
-\input{targeted_audience}
-\input{solution}
-\input{advantages}
-\input{capital}
-\input{fin}
+%\input{topicality}
+%\input{product}
+%\input{targeted_audience}
+%\input{advantages}
+%\input{capital}
+%\input{fin}
 
 \end{document}
