--- a/doc/slides/solution.tex
+++ b/doc/slides/solution.tex
@@ -5,9 +5,8 @@
 \framesubtitle{\insertsubsection}
     Игра, многие параметры которой могут быть настроены для занятий с пациентами.
     \begin{itemize}
-        \item Скорость полёта шарика и ход игрового времени.
-        \item Уровни сложности.
-        \item Много возможных движений.
-        \item Сетевой режим.
+        \item Скорость полёта шарика и ход игрового времени
+        \item Уровни сложности
+        \item Много возможных движений
     \end{itemize}
 \end{frame}
