--- a/doc/slides/targets.tex
+++ b/doc/slides/targets.tex
@@ -1,8 +1,7 @@
 \section{Цели проекта}
 
 \begin{frame}
-    \input{results}
-    \framesubtitle{\insertsubsection}
+    \frametitle{\insertsection}
     
     \begin{minipage}[h]{0.4\linewidth}
         \includegraphics[width=\linewidth]{5.jpg}
