Slides for customer updated

--- a/doc/slides/slides.tex
+++ b/doc/slides/slides.tex
@@ -11,7 +11,7 @@
 \input{plan} % План выполнения проекта
 \input{done} % Выполненные этапы
 \input{results} % Достигнутый результат
-\input{problems} % Проблемы
+%\input{problems} % Проблемы
 \input{solution} % Предлагаемое решение
 \input{dif} % Чем отличается от аналогов
 % Вопросы к заказчику
